--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,9 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            remember_me:
+                secret : '%kernel.secret%'
+                lifetime : 604800 # 1 weekin seconds
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
