--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "intl": "^1.2.5"
     }
 }
