feat: security form

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                enable_csrf : true
             remember_me:
                 secret : '%kernel.secret%'
                 lifetime : 604800 # 1 weekin seconds
