--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,8 @@ security:
             remember_me:
                 secret : '%kernel.secret%'
                 lifetime : 604800 # 1 weekin seconds
+            logout : 
+                path: logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
