--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
-/public_html/bundles/
+/public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -21,7 +21,7 @@
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public_html/build/
+/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
