--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://u147787499_quaiAntique:IbrUuO21T!z@127.0.0.1:3306/u147787499_quai_antique?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="mysql://u147787499_quaiAntique:IbrUuO21T!z@127.0.0.1:3306/u147787499_quai_antique?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/quai_antique?serverVersion=mariadb-10.4.11&charset=utf8mb4"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/quai_antique?serverVersion=mariadb-10.4.11&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
@@ -40,5 +41,6 @@ DATABASE_URL="mysql://u147787499_quaiAntique:IbrUuO21T!z@127.0.0.1:3306/u1477874
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://restaurant@quai-antique.fr:MotdepasseHostingerMail1997&@smtp.hostinger.com:465
+# MAILER_DSN=smtp://restaurant@quai-antique.fr:MotdepasseHostingerMail1997&@smtp.hostinger.com:465
+MAILER_DSN=smtp://d65046cbd3b44c:ab758d401535f7@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
