--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,12 +31,16 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    role_hierarchy : 
+        ROLE_USER :     ROLE_USER
+        ROLE_VERIFIED : ROLE_VERIFIED
+        ROLE_ADMIN :    ROLE_ADMIN
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/utilisateur/réserver, roles: ROLE_VERIFIED }
 
 when@test:
     security:
