feat: changing informations of the restaurant in the yaml

--- a/config/data/restaurant.yaml
+++ b/config/data/restaurant.yaml
@@ -1,6 +1,6 @@
-email : "AModifier@gmail.com"
-tel : "+33 1 23 45 67 89"
-places : "30"
-city : "Modifiez la ville"
-street : "Modifiez la rue"
-postcode : "12345"
+email: restaurant@quai-antique.fr
+tel: '07 68 54 97 47 '
+places: '30'
+city: Chambéry
+street: '6 Boulevard du Théâtre'
+postcode: '73000'
