--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
 /src/DataFixtures/AdminFixture.php
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
