--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    uploads: '%kernel.project_dir%/public/images/uploads'
-    resize: '%kernel.project_dir%/public/images/resize'
+    uploads: '%kernel.project_dir%/public/images/uploads/'
+    resize: '%kernel.project_dir%/public/images/resize/'
+    build-uploads: '%kernel.project_dir%/public/build/images/uploads/'
+    build-resize: '%kernel.project_dir%/public/build/images/resize/'
 
 services:
     # default configuration for services in *this* file
