--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,7 @@ security:
             logout : 
                 path: logout
 
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -44,7 +45,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/utilisateur/réserver, roles: ROLE_VERIFIED }
+        - { path: ^/client/réserver, roles: ROLE_VERIFIED }
+        - { path: ^/logout, roles: ROLE_USER }
 
 when@test:
     security:
