--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    directory: '%kernel.project_dir%/public'
     uploads: '%kernel.project_dir%/public/images/uploads/'
     resize: '%kernel.project_dir%/public/images/resize/'
     build-uploads: '%kernel.project_dir%/public/build/images/uploads/'
