feat: adding eror page

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -13,3 +13,5 @@ liip_imagine:
         thumbnail_web_path:
             filters:
                 thumbnail: { mode: inset }
+    twig:
+        mode: lazy
