--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    directory: '%kernel.project_dir%/public_html_html'
+    directory: '%kernel.project_dir%/public_html/'
     uploads: '%kernel.project_dir%/public_html/images/uploads/'
     resize: '%kernel.project_dir%/public_html/images/resize/'
     build-uploads: '%kernel.project_dir%/public_html/build/images/uploads/'
