bug: when select today date at 16pm,  can select evening

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -7,6 +7,10 @@ liip_imagine:
             web_path: ~
     webp: 
         generate: true
+    loaders:
+        default:
+            filesystem:
+                data_root: "/"
 
     filter_sets:
         cache: ~
