--- a/config/packages/reset_password.yaml
+++ b/config/packages/reset_password.yaml
@@ -1,4 +1,5 @@
 symfonycasts_reset_password:
     request_password_repository: App\Repository\ResetPasswordRequestRepository
-    throttle_limit: 0
+    lifetime: 3600
+    throttle_limit: 3600
     enable_garbage_collection: true
